Corrected wording in title and set date ._.

--- a/doc/presentation.tex
+++ b/doc/presentation.tex
@@ -6,11 +6,11 @@
 \setsansfont[Mapping=tex-text]{Verdana}
 
 \usetheme{Warsaw}
-\title[Εντοπισμός προσώπων με Haar-like χαρακτηριστικά]{Εντοπισμός προσώπων\\με χρήση χαρακτηριστικών
+\title[Ανίχνευση προσώπων με Haar-like χαρακτηριστικά]{Ανίχνευση προσώπων\\με χρήση χαρακτηριστικών
 	τύπου Haar}
 \author{Ευάγγελος Φούτρας -- Π/06156}
 \institute{Πανεπιστήμιο Πειραιώς}
-\date{Μάιος 2009}
+\date{27 Μαΐου 2009}
 
 \begin{document}
 
